WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262091
REGRESSION(
268412@main
): Fix !ENABLE(VARIATION_FONTS) build
https://bugs.webkit.org/show_bug.cgi?id=262091
Summary
REGRESSION(268412@main): Fix !ENABLE(VARIATION_FONTS) build
Ross Kirsling
Reported
2023-09-25 18:31:07 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2023-09-25 18:32:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18203
EWS
Comment 2
2023-09-25 19:14:06 PDT
Committed
268428@main
(becdaec721b2): <
https://commits.webkit.org/268428@main
> Reviewed commits have been landed. Closing PR #18203 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-09-25 19:15:15 PDT
<
rdar://problem/116029245
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug