REGRESSION(268412@main): Fix !ENABLE(VARIATION_FONTS) build https://bugs.webkit.org/show_bug.cgi?id=262091

Unreviewed PlayStation build fix.

* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::conservativelyCollectChangedAnimatableProperties const):
Guard usage of CSSPropertyFontVariationSettings.

Canonical link: https://commits.webkit.org/268428@main